[project]
name = "my-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.1",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-mcp-adapters>=0.2.1",
    "mcp>=1.25.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
